# hs-endpoint

./: .gitignore  cabal.project  flake.nix
endpoint/: LICENSE  README.md  cabal.nix  endpoint.cabal
endpoint/lib/: Endpoint.hs
endpoint/lib/Endpoint/: Class.hs  Header.hs  Instances.hs  Path.hs  Query.hs
endpoint/test/: Main.hs
route/: LICENSE  README.md  cabal.nix  route.cabal
route/lib/: Route.hs
route/lib/Route/: Class.hs
route/test/: Main.hs
waypoint/: LICENSE  README.md  cabal.nix  waypoint.cabal
waypoint/lib/: Waypoint.hs
waypoint/lib/Waypoint/: Header.hs  Instances.hs  Path.hs  Query.hs
waypoint/test/: Main.hs
