cabal-version: 2.4
name: waypoint
version: 0.1
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara, 2025
category: Web
build-type: Simple
synopsis: URL waypoint encoding and decoding
description: URL waypoint encoding and decoding
homepage: https://github.com/k0001/hs-waypoint
bug-reports: https://github.com/k0001/hs-waypoint/issues
tested-with: GHC==9.8, GHC==9.10, GHC==9.12

common basic
  default-language: GHC2021
  build-depends: base == 4.*
  default-extensions:
    BlockArguments
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    DeriveAnyClass
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ViewPatterns

library
  import: basic
  ghc-options: -O2 -Wall
  hs-source-dirs: lib
  exposed-modules:
    Waypoint
    Waypoint.Query
    Waypoint.Header
    Waypoint.Path
  other-modules:
    Waypoint.Instances
  build-depends:
    bytestring,
    containers,
    free,
    http-types,
    profunctors,
    text,
    time,
    transformers,
    uuid-types,
    witherable,


test-suite test
  import: basic
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -threaded -with-rtsopts=-N
  build-depends:
    bytestring,
    case-insensitive,
    containers,
    waypoint,
    hedgehog,
    tasty,
    tasty-hedgehog,
    tasty-hunit,
    text,
    time,
    uuid-types,
